--- a/index.html
+++ b/index.html
@@ -324,6 +324,73 @@
           </div>
         </div>
       </section>
+      <!-- client question -->
+      <section class="my-24">
+        <div class="text-center space-y-6 mb-12">
+          <h6 class="font-extrabold text-4xl">Clients Question</h6>
+          <p class="text-[#13131899] px-9">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat <br />
+            dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
+        <div class="flex gap-10 p-8">
+          <div class="w-1/2"><img src="Images/11.png" class="h-full w-full" /></div>
+          <div class="w-full space-y-6">
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">
+                Our Equipment
+              </div>
+              <div class="collapse-content">
+                <p>
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit enim sagittis turpis in magna.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                Hockey Training
+              </div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                Private Lessons
+              </div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Ski Touring</div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Booking</div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Pricings</div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- get in touch section -->
       <section class="mt-24 mb-12">
         <div class="text-center space-y-6 mb-8">
@@ -351,7 +418,7 @@
                   class="bg-[#13131808] input input-bordered input-md w-full"
                 />
               </div>
-              <div class="space-y-4  w-full">
+              <div class="space-y-4 w-full">
                 <h3 class="font-semibold">Your Email</h3>
                 <input
                   type="text"
@@ -370,7 +437,7 @@
                   class="bg-[#13131808] input input-bordered input-md w-full"
                 />
               </div>
-              <div class="space-y-4  w-full">
+              <div class="space-y-4 w-full">
                 <h3 class="font-semibold">Phone Number</h3>
                 <input
                   type="text"
@@ -379,8 +446,7 @@
                 />
               </div>
             </div>
-          
-           
+
             <form class="space-y-4">
               <h3 class="font-semibold">Message:</h3>
               <input
@@ -390,7 +456,8 @@
               />
             </form>
             <button
-              class="w-full bg-[#FF4240] text-white text-xl font-semibold py-4 rounded-xl mt-8">
+              class="w-full bg-[#FF4240] text-white text-xl font-semibold py-4 rounded-xl mt-8"
+            >
               Send Message
             </button>
           </div>
@@ -407,6 +474,7 @@
           </div>
         </div>
       </section>
+
       <!-- social media -->
       <section class="text-center bg-[#13131808] rounded-xl py-9">
         <h3 class="font-extrabold text-2xl">Social Media</h3>
@@ -415,6 +483,43 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer p-10 bg-base-200 text-base-content mt-24">
+      <aside>
+        <svg
+          width="50"
+          height="50"
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          class="fill-current"
+        >
+          <path
+            d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"
+          ></path>
+        </svg>
+        <p>ACME Industries Ltd.<br />Providing reliable tech since 1992</p>
+      </aside>
+      <nav>
+        <header class="footer-title">Services</header>
+        <a class="link link-hover">Branding</a>
+        <a class="link link-hover">Design</a>
+        <a class="link link-hover">Marketing</a>
+        <a class="link link-hover">Advertisement</a>
+      </nav>
+      <nav>
+        <header class="footer-title">Company</header>
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Contact</a>
+        <a class="link link-hover">Jobs</a>
+        <a class="link link-hover">Press kit</a>
+      </nav>
+      <nav>
+        <header class="footer-title">Legal</header>
+        <a class="link link-hover">Terms of use</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Cookie policy</a>
+      </nav>
+    </footer>
   </body>
 </html>
