--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
             dolor. Purus urna in sit nullam proin.
           </p>
         </div>
-        <div class="flex gap-10 p-8">
-          <div class="w-1/2"><img src="Images/11.png" class="h-full w-full" /></div>
+        <div class="flex flex-col lg:flex-row gap-10 p-8">
+          <div class="lg:w-1/2 "><img src="Images/11.png" class="h-full w-full" /></div>
           <div class="w-full space-y-6">
             <div class="collapse collapse-plus bg-base-200">
               <input type="radio" name="my-accordion-3" checked="checked" />
