program section added

--- a/index.html
+++ b/index.html
@@ -173,8 +173,73 @@
           </div>
         </div>
       </section>
-      <!-- new products section -->
+      <!-- program section -->
       <section class="container mx-auto">
+        <div class="text-center space-y-6 mb-8">
+          <h6 class="font-extrabold text-4xl">Program Sections</h6>
+          <p class="text-[#13131899] px-9">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat <br />
+            dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-12">
+          <div
+            class="rounded-2xl hero lg:min-h-screen "
+            style="background-image: url(Images/2.png)"
+          >
+            <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
+            <div class="hero-content text-center text-neutral-content">
+              <div class="max-w-md text-left">
+                <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+                <p class="mb-5">
+                  Provident cupiditate voluptatem et in. Quaerat fugiat ut
+                  assumenda excepturi exercitationem quasi. In deleniti eaque
+                  aut repudiandae et a id nisi.
+                </p>
+                <button class="btn btn-primary  border-0 bg-[#FF4240]">Register Now!</button>
+              </div>
+            </div>
+          </div>
+          <div
+            class="rounded-2xl hero lg:min-h-screen  "
+            style="background-image: url(Images/3.png)"
+          >
+            <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
+            <div class="hero-content text-center 
+            text-neutral-content ">
+              <div class="max-w-md text-left">
+                <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+                <p class="mb-5">
+                  Provident cupiditate voluptatem et in. Quaerat fugiat ut
+                  assumenda excepturi exercitationem quasi. In deleniti eaque
+                  aut repudiandae et a id nisi.
+                </p>
+                <button class="btn btn-primary bg-[#FF4240]">Register Now!</button>
+              </div>
+            </div>
+          </div>
+          <div
+            class="lg:col-span-2 rounded-2xl hero lg:min-h-screen"
+            style="background-image: url(Images/4.png)"
+          >
+            <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
+            <div class="hero-content text-center text-neutral-content">
+              <div class="max-w-md text-left">
+                <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+                <p class="mb-5">
+                  Provident cupiditate voluptatem et in. Quaerat fugiat ut
+                  assumenda excepturi exercitationem quasi. In deleniti eaque
+                  aut repudiandae et a id nisi.
+                </p>
+                <button class="btn btn-primary bg-[#FF4240]">Register Now!</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- new products section -->
+      <section class="container mx-auto my-25">
         <div class="text-center space-y-6 mb-8">
           <h6 class="font-extrabold text-4xl">Our New Products</h6>
           <p class="text-[#13131899] px-9">
@@ -335,7 +400,9 @@
           </p>
         </div>
         <div class="flex flex-col lg:flex-row gap-10 p-8">
-          <div class="lg:w-1/2 "><img src="Images/11.png" class="h-full w-full" /></div>
+          <div class="lg:w-1/2">
+            <img src="Images/11.png" class="h-full w-full" />
+          </div>
           <div class="w-full space-y-6">
             <div class="collapse collapse-plus bg-base-200">
               <input type="radio" name="my-accordion-3" checked="checked" />
