program section added

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                   assumenda excepturi exercitationem quasi. In deleniti eaque
                   aut repudiandae et a id nisi.
                 </p>
-                <button class="btn btn-primary bg-[#FF4240]">Register Now!</button>
+                <button class="btn btn-primary border-0 bg-[#FF4240]">Register Now!</button>
               </div>
             </div>
           </div>
@@ -232,7 +232,7 @@
                   assumenda excepturi exercitationem quasi. In deleniti eaque
                   aut repudiandae et a id nisi.
                 </p>
-                <button class="btn btn-primary bg-[#FF4240]">Register Now!</button>
+                <button class="border-0 btn btn-primary bg-[#FF4240]">Register Now!</button>
               </div>
             </div>
           </div>
