card element corrected

--- a/index.html
+++ b/index.html
@@ -567,7 +567,8 @@
               <input
                 type="text"
                 placeholder="Write your message"
-                class="bg-[#13131808] input input-bordered place-content-start w-full h-[370px]"
+                class="bg-[#13131808] input input-bordered 
+                 w-full h-[370px]"
               />
             </form>
             <button
@@ -600,7 +601,7 @@
     </main>
     <footer class="footer p-10 bg-[#131318] text-base-content mt-24">
       <div class="space-y-5">
-        <h3 class="text-white font-extrabold text-3xl">Get In Touch.</h3>
+        <h3 class="text-white font-extrabold text-3xl">Get In Touch</h3>
         <p class="text-[#FFFFFF99]">
           Dit amet consectetur. <br />Condimentum adipiscing aliquam turpis
           placerat dolor. <br />Purus urna in sit nullam proin.
