--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <li><a>Contact</a></li>
               </ul>
             </div>
-            <a class="btn btn-ghost text-xl">Hockey’s</a>
+            <a class="btn btn-ghost text-xl font-extrabold">Hockey<span class="text-[#FF4240] font-extrabold">’</span>s</a>
           </div>
           <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
@@ -73,7 +73,7 @@
             </ul>
           </div>
           <div class="navbar-end gap-3">
-            <i class="fa-solid fa-magnifying-glass text-black h-7 w-7"></i>
+            <i class="fa-solid fa-magnifying-glass text-[#89898B] h-7 w-7"></i>
             <a class="btn bg-[#FF4240] text-white font-semibold">Get Ticket</a>
           </div>
         </div>
@@ -217,55 +217,53 @@
         </div>
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-12">
           <div
-            class="rounded-2xl hero lg:min-h-screen"
-            style="background-image: url(Images/2.png)"
-          >
-            <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
-            <div class="hero-content text-center text-neutral-content">
-              <div class="max-w-md text-left">
-                <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
-                <p class="mb-5">
-                  Provident cupiditate voluptatem et in. Quaerat fugiat ut
-                  assumenda excepturi exercitationem quasi. In deleniti eaque
-                  aut repudiandae et a id nisi.
-                </p>
-                <button class="btn btn-primary border-0 bg-[#FF4240]">
-                  Register Now!
-                </button>
-              </div>
+          class="rounded-2xl hero lg:min-h-screen"
+          style="background-image: url(Images/3.png)"
+        >
+          <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
+          <div class="hero-content text-center text-neutral-content">
+            <div class="lg:max-w-xl mx-w-md mt-24 ml-5 mb-5 mr-9 text-left ">
+              <h1 class="mb-5 text-3xl font-bold">Junior Program</h1>
+              <p class="mb-5">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.
+              </p>
+              <button class="btn btn-primary border-0 bg-[#FF4240]">
+                Register Now!
+              </button>
             </div>
           </div>
-          <div
-            class="rounded-2xl hero lg:min-h-screen"
-            style="background-image: url(Images/3.png)"
-          >
-            <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
-            <div class="hero-content text-center text-neutral-content">
-              <div class="max-w-md text-left">
-                <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
-                <p class="mb-5">
-                  Provident cupiditate voluptatem et in. Quaerat fugiat ut
-                  assumenda excepturi exercitationem quasi. In deleniti eaque
-                  aut repudiandae et a id nisi.
-                </p>
-                <button class="btn btn-primary border-0 bg-[#FF4240]">
-                  Register Now!
-                </button>
-              </div>
-            </div>
+        </div>
+        <div
+        class="rounded-2xl hero lg:min-h-screen"
+        style="background-image: url(Images/3.png)"
+      >
+        <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
+        <div class="hero-content text-center text-neutral-content">
+          <div class="lg:max-w-xl mx-w-md mt-24 ml-5 mb-5 mr-9 text-left ">
+            <h1 class="mb-5 text-3xl font-bold">Master Program</h1>
+            <p class="mb-5">
+              Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.
+            </p>
+            <button class="btn btn-primary border-0 bg-[#FF4240]">
+              Register Now!
+            </button>
           </div>
+        </div>
+      </div>
+         
           <div
             class="lg:col-span-2 rounded-2xl hero lg:min-h-screen"
             style="background-image: url(Images/4.png)"
           >
             <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
             <div class="hero-content text-center text-neutral-content">
-              <div class="max-w-md text-left">
-                <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+              <div class="text-left lg:max-w-xl mx-w-md mt-24 ml-5 mb-5 lg:mr-[610px]  ">
+                <h1 class="mb-5 text-3xl font-bold">Professional Program</h1>
                 <p class="mb-5">
-                  Provident cupiditate voluptatem et in. Quaerat fugiat ut
-                  assumenda excepturi exercitationem quasi. In deleniti eaque
-                  aut repudiandae et a id nisi.
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                  enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.
                 </p>
                 <button class="border-0 btn btn-primary bg-[#FF4240]">
                   Register Now!
