--- a/index.html
+++ b/index.html
@@ -142,6 +142,14 @@
     <main class="container mx-auto">
       <!-- progress section -->
       <section class="mt-12 mb-24">
+        <div class="text-center space-y-6 border-dashed border-[#13131833] border-t-2 border-b-2 py-8 mt-24 mb-12">
+          <h6 class="font-extrabold text-4xl">Program Sections</h6>
+          <p class="text-[#13131899] px-9">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat <br />
+            dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
         <div class="flex flex-col lg:flex-row">
           <!-- 1st progress -->
           <div class="text-center space-y-5 p-5">
