--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </nav>
       <div class="relative">
         <div class="carousel w-full mt-14">
-          <div id="slide1" class="carousel-item relative w-full">
+          <div id="slide1" class="carousel-item relative w-full rounded-2xl">
             <img src="Images/1.png" class="w-full" />
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
@@ -90,10 +90,10 @@
               <a href="#slide2" class="btn btn-circle">❯</a>
             </div>
           </div>
-          <div id="slide2" class="carousel-item relative w-full">
+          <div id="slide2" class="carousel-item relative w-full rounded-2xl">
             <img
               src="https://daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.jpg"
-              class="w-full"
+              class="w-full rounded-2xl"
             />
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
@@ -105,7 +105,7 @@
           <div id="slide3" class="carousel-item relative w-full">
             <img
               src="https://daisyui.com/images/stock/photo-1414694762283-acccc27bca85.jpg"
-              class="w-full"
+              class="w-full rounded-2xl"
             />
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
@@ -117,7 +117,7 @@
           <div id="slide4" class="carousel-item relative w-full">
             <img
               src="https://daisyui.com/images/stock/photo-1665553365602-b2fb8e5d1707.jpg"
-              class="w-full"
+              class="w-full rounded-2xl"
             />
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
@@ -543,7 +543,7 @@
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
           <!-- contact card -->
           <div
-            class="border-2 border-[#1313181A] flex flex-col p-12 gap-36  row-span-1 rounded-2xl"
+            class="border-2 border-[#1313181A] flex flex-col p-12 gap-36 row-span-1 rounded-2xl"
           >
             <div class="space-y-6 bg-[#BCED6D1A] rounded-2xl p-8">
               <img src="Images/Group 1171275317.png" alt="" />
@@ -567,7 +567,6 @@
                 <h3 class="font-extrabold">152/1 Mohakhali Wireless Gate</h3>
               </div>
             </div>
-           
           </div>
           <div class="row-span-1 space-y-6">
             <div class="flex gap-6">
